Cleanup before submitting pull request

--- a/examples/webgl_materials_texture_hdr.html
+++ b/examples/webgl_materials_texture_hdr.html
@@ -137,7 +137,7 @@
 
 				var loader = new THREE.RGBELoader();
 
-				var texture = loader.load( "textures/hdr/18o5.tif", function( texture, textureData ){
+				var texture = loader.load( "textures/miranda_uncropped.hdr", function( texture, textureData ){
 					console.log( textureData.header ); // header string
 					console.log( [textureData.width, textureData.height] ); // dimensions
 					materialHDR = new THREE.ShaderMaterial( {
